# src/schema/openapi.json
@@ -76,12 +76,12 @@
         }
       }
     },
-    "/v1/article/{id}": {
+    "/v1/article/{article_id}": {
       "get": {
         "description": "article(単体)の取得",
         "parameters": [
           {
-            "name": "id",
+            "name": "article_id",
             "in": "path",
             "description": "article id",
             "required": true,
@@ -108,7 +108,7 @@
         "description": "articleの更新",
         "parameters": [
           {
-            "name": "id",
+            "name": "article_id",
             "in": "path",
             "description": "article id",
             "required": true,
@@ -138,7 +138,7 @@
         "description": "articleの削除",
         "parameters": [
           {
-            "name": "id",
+            "name": "article_id",
             "in": "path",
             "description": "article id",
             "required": true,
